# casync

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
cmake/toolchains/: i386-gnu-linux.cmake  i686-w64-mingw32.cmake  x86_64-w64-mingw32.cmake
example/: example1.c  example2.c  example3.c
include/casync/: casync.h
src/: casync.c  example2.c  example3.c  yield.c
src/arch/: stack_x86_64_sysv64.c  stack_x86_64_win64.c  stack_x86_i386.c  yield_gas_x86_64_sysv64.s  yield_gas_x86_64_win64.s  yield_gas_x86_i386.s  yield_masm_x86_64_win64.asm
util/: sleep_posix.c  sleep_win32.c
